--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==3.2
-dj-database-url==0.5.0
 gunicorn==19.8.1
 psycopg2==2.7.4
-# whitenoise==3.3.1
+whitenoise==6.0
 django-utils-six
+sqlparse
+django-heroku
